*Empty MediaWiki Message*

--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -1,6 +1,6 @@
 {{Infobox country
 |conventional_long_name = Dowlad Goboleedka Khaatumo ee Soomaaliya
-|common_name = Khatumo (Darawiish)
+|common_name = Khatumo 
 |image_flag = Darawiish (khatumo) flag.png 
 |image_coat =  Darawiish SSC crest.jpg
 |image_map = KhatumoStateloc.PNG
