--- a/Buur-Cukur.mw
+++ b/Buur-Cukur.mw
@@ -1,5 +1,4 @@
 {{Caddayn u baahan}}
 '''Buur-Cukur''' Waa tuulo qadiimi ah oo katirsan [[Degmada Feer-feer]] ee [[DDS|Dawlad Deegaanka Soomaalida]] ee dalka Itoobiya. Waxa ay xuduud la leedahay [[Mustaxiil|Degmada Mustaxiil]] iyo tuulada [[Abaaley]]. Waxaa mara [[Wabiga Shabeelle]] waana dhul-beer eed qani ah oo ku habboon tabcashada waxaana ku beeran inta badan dalaga iyo miraha ay [[Dad|dadka]] [[Soomaaliyeed]] isticmaalaan.Waxa marta wada Laamiga ah ee uu talyaanigii dhisay oo ku xidha ilaa iyo [[Beledweyne]]. Waxa ay qiyaastii 230km ujirtaa Magaalada [[Godeey|Godey]] ee xarunta u ah Gobolka [[Shabeele|Shabeelle]] ee [[DDS]].
 
-Waxa dega [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]  oo ah dad [[Cilmi|Culimo]] ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto. Caalimkii weynaa ee [[Sheekh Cumar Faaruuq]] iyo Sheekh; Muxumed Haadi ayaana kow ka ah Mashaa’ikhta meesha kasoo jeeda amaba ku abtirsata ee lagu ogyahay.
-{{gumud}}
+Waxa dega [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]  oo ah dad [[Cilmi|Culimo]] ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto. Caalimkii weynaa ee [[Sheekh Cumar Faaruuq]] iyo Sheekh; Muxumed Haadi ayaana kow ka ah Mashaa’ikhta meesha kasoo jeeda amaba ku abtirsata ee lagu ogyahay. {{Infobox settlement|name=|coordinates=<!-- {{Coord}} -->|subdivision_name2=|subdivision_type2=|subdivision_name1=|subdivision_type1=|subdivision_name=|subdivision_type=Country|population_total=|nickname=|native_name=|etymology=|image_caption=|image_alt=|imagesize=|image_skyline=|settlement_type=|native_name_lang=<!-- ISO 639-2 code e.g. "fr" for French. If more than one, use {{lang}} instead -->|website=<!-- {{URL|example.com}} -->}}{{gumud}}
