*Empty MediaWiki Message*

--- a/Buur-Cukur.mw
+++ b/Buur-Cukur.mw
@@ -3,4 +3,4 @@
 
 Waxa dega [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]  oo ah dad [[Cilmi|Culimo]] ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto. Caalimkii weynaa ee [[Sheekh Cumar Faaruuq]] iyo Sheekh; Muxumed Haadi ayaana kow ka ah Mashaa’ikhta meesha kasoo jeeda amaba ku abtirsata ee lagu ogyahay. 
 
-https://en.m.wikipedia.org/wiki/Buur_Ukur {{Infobox settlement|name=|coordinates=<!-- {{Coord}} -->|subdivision_name2=[[Degmada Feer-feer]]|subdivision_type2=[[Degmada]]|subdivision_name1=[[Soomaali Galbeed]]|subdivision_type1=Gobolka|subdivision_name={{flag|Itoobiya}}|subdivision_type=Dalka|population_total=|nickname=|native_name=|etymology=|image_caption=Muuqaalka Sare ee Buur-Cukur.|image_alt=|imagesize=|image_skyline=Buur-Cukur.jpg|settlement_type=Tuulo|native_name_lang=[[Buur-Cukur]]|website=<!-- {{URL|example.com}} -->}}{{gumud}}
+https://en.m.wikipedia.org/wiki/Buur_Ukur {{Infobox settlement|name=|coordinates={{coord|5.0723|44.9138|region:ET|display=inline}}|subdivision_name2=[[Degmada Feer-feer]]|subdivision_type2=[[Degmada]]|subdivision_name1=[[Soomaali Galbeed]]|subdivision_type1=Gobolka|subdivision_name={{flag|Itoobiya}}|subdivision_type=Dalka|population_total=|nickname=|native_name=|etymology=|image_caption=Muuqaalka Sare ee Buur-Cukur.|image_alt=|imagesize=|image_skyline=Buur-Cukur.jpg|settlement_type=Tuulo|native_name_lang=[[Buur-Cukur]]|website=<!-- {{URL|example.com}} -->}}{{gumud}}
