--- a/Degmada_Feer-feer.mw
+++ b/Degmada_Feer-feer.mw
@@ -3,9 +3,9 @@
 {{Infobox settlement
 | official_name                   = Feer-feer
 | native_name                     = 
-| image_skyline                   = 
+| image_skyline                   =Feer-feer.jpg 
 | imagesize                       = 
-| image_caption                   = 
+| image_caption                   =Muuqaalka Sare ee Degmada Feer-feer 
 | image_flag                      = 
 | image_seal                      = 
 | image_map                       = 
@@ -28,8 +28,8 @@
 | area_magnitude                  = 
 | area_total_sq_mi                = 
 | area_total_km2                  = 
-| area_land_sq_mi                 = 
-| area_land_km2                   = 
+| area_land_sq_mi                 =50 
+| area_land_km2                   =50 
 | area_urban_sq_mi                = 
 | area_urban_km2                  = 
 | area_metro_km2                  = 
@@ -51,7 +51,7 @@
 | elevation_ft                    = 
 | postal_code_type                = 
 | postal_code                     = 
-| area_code                       = 
+| area_code                       =251 
 | website                         = 
 | footnotes                       = 
 | name                            = 
