--- a/Garaad.mw
+++ b/Garaad.mw
@@ -1,3 +1,3 @@
-'''Garaadka''' waa hoggaamiyaha Dhulbahante oo ka tirsan boqoradda Baharsame.
+'''Garaadka''' waa hoggaamiyaha [[reer darawiish]] oo ka tirsan boqoradda Baharsame.
 
 [[category:dhaqan]]
