--- a/Marqaan.mw
+++ b/Marqaan.mw
@@ -1,5 +1,5 @@
 '''Marqaan''' ama Marqaan wayne waa magaalo Tariikhi ah oo ku taala [[Soomaali Galbeed|Ismamul gobaleedka Soomaalida]] [[Itoobiya]]. Magaladaan waxay caan ku tahay xoolaha. Waxay ku taalaa dhul daaqsimeed aad u wanaagsan, waxana dega qabiilka tariikhda Soomaalida ugu caansan caligeri axmed garaad. Magaalada marqaan waxay caan ku tahay xoolaha sida geela iyo adhiga
-darwiish jaamac biixi <nowiki>''</nowiki>''<nowiki>maagaca magaaladu waxuu ku qotomaa ceel biyood la oran jiray (Marqaad-wayne) micnaheedu yahay ceel mug-wayn  halkaas oo dadku ugu dhawaaqay marqaan wayne''</nowiki>'' Aasaaska magalada waxaa qayb weyn ka ciyaaray Boqortoyada Ingiriiska oo laha qorshe ku adan in beelaha dhulbahante in laga saaro dhulka Soomaaliya. magaaladu waxay leedahay kaabayaal dhaqaale oo fiican. waxaa ka mid ah astaamaha marqaan in ganacsigu ku koro jamac biixi ayaa sheegay in marqaan lagu sheego inuu degan yahay ''jin qani ah''. magaalada waxaa ku dhaqan in ka badan 15.000 oo qof waana magalada sedexaad ee ugu dadka badan dhulka dhulbahantaha marka laga tago Laascaanood iyo Buuhoodle waxaa magaalada hoostaga oo laga xukumaa magaalooyin badan.
+darwiish jaamac biixi <nowiki>''</nowiki>''<nowiki>maagaca magaaladu waxuu ku qotomaa ceel biyood la oran jiray (Marqaad-wayne) micnaheedu yahay ceel mug-wayn  halkaas oo dadku ugu dhawaaqay marqaan wayne''</nowiki>'' Aasaaska magalada waxaa qayb weyn ka ciyaaray Boqortoyada Ingiriiska oo laha qorshe ku adan in beelaha [[reer darawiish]] in laga saaro dhulka Soomaaliya. magaaladu waxay leedahay kaabayaal dhaqaale oo fiican. waxaa ka mid ah astaamaha marqaan in ganacsigu ku koro jamac biixi ayaa sheegay in marqaan lagu sheego inuu degan yahay ''jin qani ah''. magaalada waxaa ku dhaqan in ka badan 15.000 oo qof waana magalada sedexaad ee ugu dadka badan dhulka [[reer darawiish]] marka laga tago Laascaanood iyo Buuhoodle waxaa magaalada hoostaga oo laga xukumaa magaalooyin badan.
 
 == Tuulooyinka hoostaga ==
 * [[Goobwayne]]e
