--- a/Buur-Cukur.mw
+++ b/Buur-Cukur.mw
@@ -1,6 +1,8 @@
 {{Caddayn u baahan|Source=https://en.m.wikipedia.org/wiki/Buur_Ukur}}
 '''Buur-Cukur(Af Ingiriis:[https://en.m.wikipedia.org/wiki/Buur_Ukur]''' Waa tuulo qadiimi ah oo katirsan [[Degmada Feer-feer]] ee [[DDS|Dawlad Deegaanka Soomaalida]] ee dalka Itoobiya. Waxa ay xuduud la leedahay [[Mustaxiil|Degmada Mustaxiil]] iyo tuulada [[Abaaley]]. Waxaa mara [[Wabiga Shabeelle]] waana dhul-beer eed qani ah oo ku habboon tabcashada waxaana ku beeran inta badan dalaga iyo miraha ay [[Dad|dadka]] [[Soomaaliyeed]] isticmaalaan.Waxa marta wada Laamiga ah ee uu talyaanigii dhisay oo ku xidha ilaa iyo [[Beledweyne]]. Waxa ay qiyaastii 230km ujirtaa Magaalada [[Godeey|Godey]] ee xarunta u ah Gobolka [[Shabeele|Shabeelle]] ee [[DDS]].
 
-Waxa dega [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]  oo ah dad [[Cilmi|Culimo]] ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto. Caalimkii weynaa ee [[Sheekh Cumar Faaruuq]] iyo Sheekh; Muxumed Haadi ayaana kow ka ah Mashaa’ikhta meesha kasoo jeeda amaba ku abtirsata ee lagu ogyahay. 
+Buur-Cukur waxa ay leedahay [[Masaajid|Masjid]] weyn,Dugsi Hoose/dhexe,Dugsi Sare,Xarun Caafimaad iyo Madaraso Diini ah.Waxaa kale oo ay leedahay adeegyada aas-aasiga ah sida;Isgaadhsiinta,Biya gelinta iyo jid Cadde laami ahaan ah oo uu [[Talyaaniga|Talyaani]]<nowiki/>gii sameeyay inkasta oo uu bur-bursan yahay.
+
+Waxa degta [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]  oo ah dad [[Cilmi|Culimo]] ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto. Caalimkii weynaa ee [[Sheekh Cumar Faaruuq]] iyo Sheekh; Muxumed Haadi ayaana kow ka ah Mashaa’ikhta meesha kasoo jeeda amaba ku abtirsata ee lagu ogyahay. 
 
 https://en.m.wikipedia.org/wiki/Buur_Ukur {{Infobox settlement|name=|coordinates={{coord|5.0723|44.9138|region:ET|display=inline}}|subdivision_name2=[[Degmada Feer-feer]]|subdivision_type2=[[Degmada]]|subdivision_name1=[[Soomaali Galbeed]]|subdivision_type1=Gobolka|subdivision_name={{flag|Itoobiya}}|subdivision_type=Dalka|population_total=|nickname=|native_name=|etymology=|image_caption=Muuqaalka Sare ee Buur-Cukur.|image_alt=|imagesize=|image_skyline=Buur-Cukur.jpg|settlement_type=Tuulo|native_name_lang=[[Buur-Cukur]]|website=<!-- {{URL|example.com}} -->}}{{gumud}}
