*Empty MediaWiki Message*

--- a/Tuulada_geelkusooran.mw
+++ b/Tuulada_geelkusooran.mw
@@ -3,6 +3,6 @@
 tuuladan ayaa waxaa lagu arkaa waxyaabo la la yaabo mararka qaar waxaa laga helaa qalabkii dadkii hore ku dagaalami jireen,isku qurxin jireen,kabihii cagba cagta la'odhan jiray,
 sidoo kale tuuladan waxay hodan ku tahay noocyada macdanta dabiiciga ah,
 mararka qaar ayaa la'arkaa diyaarado helicopters oo ku dagaya lamana oga sababtaasi
-tuuladan ayaa waxaa degan beesha maxamed muuse oo katirsan beelaha dhulbahante
+tuuladan ayaa waxaa degan beesha maxamed muuse oo katirsan beelaha [[reer darawiish]] 
 
 {{gumud}}
