--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -60,9 +60,10 @@
 }}
 [[File:Sacmadeeqa ee u dhow ceelka Qoob-Fardood.jpg|thumb|[[Sacmadeeqa]] waa taallo ee u dhow ceelka Qoob Fardood ee xaafadda Buuhoodle.]]
 
-Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darwiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[Somaliland|Somalialand]].
+Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darwiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[reer darawiish]] wax ka taliya.
 
-Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Abaanduulkii guud ee Daraawiish, [[Ismaaciil Mire]] wuxuu ku dhashay Buuhoodle.
+Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Waana magalada ee ugu dadka badan dhulka [[reer darawiish]] marka laga tago Laascaanood iyo [[Marqaan wayne]], iyo hareeraha [[Fiqifuliye]].
+
 
 ==Daraawiishta==
 Waa meel caan ah oo xuddun u ah dhaqdhaqaaqa alaabada ka imaanaya gobolada Somalia iyo gobolka Somali Galbeed. Degaanka ku hareereysan ayaa hodan ku ah xoolaha iyo beeraha oo soo kordhay. Waxay leedahay dugsiyada hoose, dugsiyada sare iyo jaamacadaha. Buhoodle waa magaalo dhexdhexaad ah oo leh xarumo caafimaad, isbitaallo, koronto iyo dhammaan goobaha laga rabo magaalada. Waxaa muuqata in uu yahay goobtii aabe ee aabaha Ummadda Soomaaliyeed, [[Ismaaciil Mire]].
