*Empty MediaWiki Message*

--- a/Fiqifuliye.mw
+++ b/Fiqifuliye.mw
@@ -1,1 +1,1 @@
-Fiqifuliye waa magaalo oo ku yaalo Sanaag bartamaheeda.
+Fiqifuliye waa magaalo oo ku yaalo Sanaag bartamaheeda. Deegaanka Fiqifuliye waxaa ku nool [[reer darawiish]].
