*Empty MediaWiki Message*

--- a/Fiqishinni.mw
+++ b/Fiqishinni.mw
@@ -1,4 +1,4 @@
-Fiqishini waa Jifo kamid ah beesha Ayaanle Cayr waxan degan gobolada koonfur iyo waqooyi,Waxayna ku abtirsadaan habargidir Hawiye. Fiqishini waa beel caan ah ku ah dhinaca diinta iyo sidoo kale geesinimada Waxayna ood wadaag yihiin dhulbahante oo ay isla degaan gobolada waqooyi. Fiqishini waa naaneys magaca saxda ah waa Fiqi cumar Ayaanle Cayr. Waxa kale [[Adhicadeeye|oo]] ay Beeshu degtaa magalaada baabili oo ah xarunta beelaha Hawiye ee dalka itobiya sida degmooyinka feedhocade maya maluuga iyo deegano hoostaga waxayna oodwadaagyihiin beelaha jidle Hawiye karanle Hawiye Gaaljecel Iyo saruur oo ah Hawiyaha dega magaalada baabili iyo xadka gobolka fiiq ee DDS Sidoi kale beesha Fiqishini waxay degtaa magaalda muqdisho ee caasimada halkaas oo ay ku leedahay ganacsi farabadan
+Fiqishini waa Jifo kamid ah beesha Ayaanle Cayr waxan degan gobolada koonfur iyo waqooyi,Waxayna ku abtirsadaan habargidir Hawiye. Fiqishini waa beel caan ah ku ah dhinaca diinta iyo sidoo kale geesinimada Waxayna ood wadaag yihiin [[reer darawiish]] oo ay isla degaan gobolada waqooyi. Fiqishini waa naaneys magaca saxda ah waa Fiqi cumar Ayaanle Cayr. Waxa kale [[Adhicadeeye|oo]] ay Beeshu degtaa magalaada baabili oo ah xarunta beelaha Hawiye ee dalka itobiya sida degmooyinka feedhocade maya maluuga iyo deegano hoostaga waxayna oodwadaagyihiin beelaha jidle Hawiye karanle Hawiye Gaaljecel Iyo saruur oo ah Hawiyaha dega magaalada baabili iyo xadka gobolka fiiq ee DDS Sidoi kale beesha Fiqishini waxay degtaa magaalda muqdisho ee caasimada halkaas oo ay ku leedahay ganacsi farabadan
 
 Suldaan Mustafe Suldaan Awseed waa suldaanka guud ee beesha Fiqishini ahna nin culimo ah .
 Caaqil Abdikarim caaqil Maxamed caaqil cabsiiye waa caaqilka guud ee beesha Fiqishin iyo abwaano abwaan geele ismaciil macalin geele faruur iyo abwaan Hamza jaamac farah abwaan jarmal syl
