--- a/Togdheer.mw
+++ b/Togdheer.mw
@@ -55,7 +55,7 @@ Explorer Frank Linsly James, oo marti u ah Sultan Awad Diiriye intii uu booqasho
 Intii aan joognay Burco, Suldaanku wuxuu soo ururiyay dad badan oo ka mid ah dadkiisa, labo jeer ayaa na soo dhaweeyay qaar ka mid ah qaab-dhismeedyada iyo dabeecadaha wanaagsan ee farshaxanka. Munaasabadda ugu horeysay waxaa ka soo qaybgalay afartan nin oo raggii la socday oo ka soo horjeeda Tigreega ka hor inta aan dhicin; laakiin tani ma aysan qancin Suldaan, oo waxa uu diyaariyay "fanaaniin labaad", taas oo si buuxda laba boqol oo dagaalyahanno ah ay qabteen. Waxay ahayd midka ugu fiican ee ugu caansan ee noocan ah ee aan waligay arkey. Diiwaangelin ayaa markii hore lagu sameeyay sariirta webiga, iyo calaamad la siiyay ayaa dhammaantood googo'een, calaamadiyey maryo iyo gaashaan. Oo waxay ku cayaareen raggii xoogga badnaa, oo waxay fadhiyeen gaashaammada yaryar iyo gaashaammada waaweynba, oo waxay lahaayeen weelal saliid gooni ah, markaasay quudhsan doonaan markii ay dhilloobaan. Qof walba oo dagaalyahanno ah wuxuu qabsadey shaashad gaaban oo ay la socoto qeylo dhaadheer oo ballaadhan, oo ay ku dhufatay daboolka unmercifully. Qaar ka mid ah rakaabkii waxay soo mareen marxalado caadi ah, oo ka soo fuqday fardahoodii markay gallop buuxa, qaadashada waxyaabo la tuuro dhulka, ka dibna dib loo dhigo. Ka dib markii ay sii socotey wakhti wakhti ah waxay ku dhajinayaan inay kudhowaan "Zarba", waxaannu ku dhajinaynaa, "Mort, mortar" ("Welcome, welcome"), oo aan ku jawaabay, "lib liban" ("mahadsan"). ]
 Dhaqdhaqaaqa Dervish 
 
-Dervish State waxaa lagu aasaasay magaalada Burco sannadkii 1899. Dabayaaqadii bishii Agoosto ee sannadkaas hoggaamiyeyaasha Dervish iyo taageerayaashooda qabaa'ilka ayaa isugu soo ururay Burco, Maxamed Cabdullaahi Xasan iyo taageerayaashiisa Dhulbahante, qabiilooyinka kala duwan ee Jeclo ee qabaa'ilka Xaaji Sudi, iyo Sultan Nuur Axmed Aman iyo taageerayaashiisa ka soo jeeda qabiilka Habr Yunis, ayaa caddeeyay cadaawad furan. [9] Deeqda la isku daro iyo xulafadooda qabiilka waxay u direen warqaddan soo socda ee Captain Cordeauxe iyo James Hayes Sadler:
+Dervish State waxaa lagu aasaasay [[Dareema Caddo]] oo waxaa aasaasay [[reer darawiish]]:
 
 "Tani waa inaad ku wargeliso inaad adigu samaysay wax kasta oo aad doonaysay, oo dulmisay diinteenna caanka ah ee aan wax sabab ah u lahayn.{| class="wikitable"
 |-
