*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -64,7 +64,7 @@ Ceerigaabo waa magaalo ka mid ah magaloyinka ugu waweyn Somaliland, ceerigaabo w
 Magalada Ceerigaabo ee gobolka sanaag ayaa ku caan baxday bilicsami iyo cagaar.
 
 ==qabiilka degan==
-Magaladan oo ay wada degaan bulsho badan oo Somaali ahi. Sida la wada ogyahay Magalada ceerigaabo iyo dadkeeduba waxay aad u jecelyihiin nabada.magalda qabiilada dega waa 6 beelod 1- '''[[Habarjeclo]]''' 2-'''[[habaryoonis]]'''  3- '''Ogayslabe'''  4-'''[[dhulbahante]]''' 5- '''[[warsangali]]''' 6-Gahayle   inta badan magalada gudaheeda ama xafadaheda iyo baadiyaha u dhow marka loga kaco afarta dhinacba.
+Magaladan oo ay wada degaan bulsho badan oo Somaali ahi. Sida la wada ogyahay Magalada ceerigaabo iyo dadkeeduba waxay aad u jecelyihiin nabada.magalda qabiilada dega waa 6 beelod 1- '''[[Habarjeclo]]''' 2-'''[[habaryoonis]]'''  3- '''Ogayslabe'''  4-'''[[reer darawiish]]''' 5- '''[[warsangali]]''' 6-Gahayle   inta badan magalada gudaheeda ama xafadaheda iyo baadiyaha u dhow marka loga kaco afarta dhinacba. [[Reer darawiish]] waxay weliba ku nool yihiin xaafadaha ee hareeraha Cerigaabo koonfur bari ka xigta, Masagan oo kale.
 
 ==Sidoo kale fiiri==
 *[[Liiska magaalooyinka Soomaaliya]]
