--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -62,7 +62,7 @@
 
 Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darwiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[reer darawiish]] wax ka taliya.
 
-Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Waana magalada ee ugu dadka badan dhulka [[reer darawiish]] marka laga tago Laascaanood iyo [[Marqaan wayne]], iyo hareeraha [[Fiqifuliye]].
+Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Waana magalada ee ugu dadka badan dhulka [[reer darawiish]] marka laga tago Laascaanood iyo [[Marqaanwayne]], iyo hareeraha [[Fiqifuliye]].
 
 
 ==Daraawiishta==
