*Empty MediaWiki Message*

--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -14,15 +14,15 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            = Somaliland location map.png
+|pushpin_map            = 
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
-|pushpin_map_caption    =Meesha ay kaga dhacdo Somaliland
+|pushpin_map_caption    =Meesha ay kaga dhacdo dhulka [[reer darawiish]]
 |coordinates_display    =inline,title
 |coordinates_region     =SO-TO
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Somaliland}}
-|subdivision_type1      =[[Gobolada Somaliland|Gobol]]
+|subdivision_name       =dhulka [[reer darawiish]]
+|subdivision_type1      =Gobol [[reer darawiish]]
 |subdivision_name1      =[[Cayn]]
 |subdivision_type2      =|[[Degmo]]
 |subdivision_name2      =[[Degmada Buuhoodle|Buuhoodle]]
