*Empty MediaWiki Message*

--- a/Template:Beelaha_Soomaalida.mw
+++ b/Template:Beelaha_Soomaalida.mw
@@ -8,7 +8,7 @@
 | list1 =
 *[[Mareexaan]]
 *[[Ogaadeen (beel)|Ogaadeen]]
-*[[Dhulbahante]]
+*[[Dhulbahante|Dhulbahante (Reer Darawiish)]]
 *[[Majeerteen]]
 *[[Dishiishe]]
 *[[Warsangali]]
