--- a/Galdogob.mw
+++ b/Galdogob.mw
@@ -66,7 +66,7 @@
 '''Galdogob''' waa dagmo ka tirsan [[Mudug|Gobolka Mudug]]. Waxaa ay dhinaca galbeed ka xigtaa magaalada Gaalkacyo cabbir ahaan waxa ay u jirtaa galkacyo: {{km|80}}. Galdogob waxaa ay ka mid tahay magaalooyinka ugu waawayn ee maamul goboleedka somalia 
 Magaalada Galdogob ayaa leh addeeg bulsho oo hagaagsan.magaaladu waxaa ay leedahay koronto joogto ah iyo biyo aan kala go,o lahayn.
 
-Magalada galdogob waxaa ay ka mid tahay,ahaana jirtay magaalooyinka ugu nabada badan [[Soomaaliya]]. Dadka daga magaalada oo ka kooban qabaa'ilo kala gadisan ayaa ah kuwo si wada jira oga shaqeeyay nabada.nabada ay ku naalooto galdogob iyo hagarla,aanta jaaliyadaha reer galdogob ee ku nool dibadaha ayaa xawaare aad u xoogan gashay horumarka dhinacyada kala gadisan ee magaalada.inkasta oo ay galdogob ku guulaysatay horumarka xaga dhismaha baaxada leh, adeega bulshada iyo ganacsiga fudud hadana waxay si buuxda ugu guuldaraysatay hanaan siyaasad oo aan isbedelin. Dadka reer galdogob oo ah muxaafidiin xagga dhaqanka ah ayaa sameeyay maamul furfuran. Dhamuuke Shire iyo rag kale oo badan siyaasiyiintaan ayaa isugu jira kuwo heer deegaan, heer gobol ilaa heer caalami. Xagga dhaqanka waa magaalo ku fiican dhaqanka iyo nidaamkii geed hoostiis. GALDOGOB  waxaa dagan beelaha leelkase iyo sacad , waxayna ka tirsan tahay maamulka Galmudug 
+Magalada galdogob waxaa ay ka mid tahay,ahaana jirtay magaalooyinka ugu nabada badan [[Soomaaliya]]. Dadka daga magaalada oo ka kooban qabaa'ilo kala gadisan ayaa ah kuwo si wada jira oga shaqeeyay nabada.nabada ay ku naalooto galdogob iyo hagarla,aanta jaaliyadaha reer galdogob ee ku nool dibadaha ayaa xawaare aad u xoogan gashay horumarka dhinacyada kala gadisan ee magaalada.inkasta oo ay galdogob ku guulaysatay horumarka xaga dhismaha baaxada leh, adeega bulshada iyo ganacsiga fudud hadana waxay si buuxda ugu guuldaraysatay hanaan siyaasad oo aan isbedelin. Dadka reer galdogob oo ah muxaafidiin xagga dhaqanka ah ayaa sameeyay maamul furfuran. Dhamuuke Shire iyo rag kale oo badan siyaasiyiintaan ayaa isugu jira kuwo heer deegaan, heer gobol ilaa heer caalami. Xagga dhaqanka waa magaalo ku fiican dhaqanka iyo nidaamkii geed hoostiis. GALDOGOB  waxaa dagan beesha Leelkase, waxayna ka tirsan tahay maamulka Puntland. 
 
 WAXBARASHADA GALDOGOB.
 
