*Empty MediaWiki Message*

--- a/Kabxanley.mw
+++ b/Kabxanley.mw
@@ -1,1 +1,1 @@
-'''Kabxaanley''' waa Dagmo ka tirsan gobolka hiiraan waxaay magalada baladwayne ka jirtaa dhinacaga waqooyi galbeed waxayna u dhowdahay xadka [[Ethiopia]] dagmada waxay caanku tahay wax soo saarka beeraha iyo xoolaha dagmada waxaa dago beesha qubeys ( faqicumar).
+'''Kabxaanley''' waa Dagmo ka tirsan gobolka hiiraan waxaay magalada baladwayne ka jirtaa dhinacaga waqooyi galbeed waxayna u dhowdahay xadka [[Ethiopia]] dagmada waxay caanku tahay wax soo saarka beeraha iyo xoolaha dagmada waxaa dago beesha surre ( ree ow heraar iyo faqicumar).
