*Empty MediaWiki Message*

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -11,7 +11,7 @@
 }}
 {{caddayn u baahan}}
 [[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
-'''Dhulbante''', ([[Carabi]]: عشيرة درویش, ''qabiilka darawiish'', [[Carabi]]: قبيلة درویش) sidoo kale loo yaqaano '''Beesha Darawiish''' ama '''siciid harti''' waa qabiil kamida [[Beelaha Soomaalida|qabaailka Soomaaliyeed]] ee dega waqooyiga iyo galbeedka [[Soomaaliya]], ee ku caan baxday waa qabiilka ee raacay [[Sayyidka]] iyo halganka [[Dawlada Darawiish]]. Dhulbahante waxaa kaloo loo yaqaan ''Reer Daraawiish'', waxayna kasoo jeedaan beel waynta [[Daarood]], dhulbahante waxa uu dagaa gobolada [[Sool]], [[Sanaag]], [[Cayn]] iyo weliba [[kililka shanaad]] ee [[itoobiya]] sida doollo iyo [[wardheer]]. Dhulbahante waxa uu kamid yahay beelaha waawayn ee aragtida ka dhiibta arrimaha Soomaaliya ee saamaynta tooska ah ku leh siyaasadda, iyagoo halgankii xornimo doonka gacan wayn kagaystay. Dhulbahante oo loogu yeedho daraawiish sababtuna ay tahay waxay ahaayee dadkii aas aasay oo hir galiyey dawladii islaamiga ahyd oo kadhisnayd gobolada SSC taasoo ay soomalida ugu yeeraan daraawiishta .
+'''Dhulbante''', ([[Carabi]]: عشيرة درویش, ''qabiilka darawiish'', [[Carabi]]: قبيلة درویش) sidoo kale loo yaqaano '''Beesha Darawiish''' ama '''siciid harti''' waa qabiil kamida [[Beelaha Soomaalida|qabaailka Soomaaliyeed]] ee dega waqooyiga iyo galbeedka [[Soomaaliya]], ee ku caan baxday waa qabiilka ee raacay [[Sayyidka]] iyo halganka [[Dawlada Darawiish]]. Dhulbahante waxaa kaloo loo yaqaan ''Reer Daraawiish'', waxayna kasoo jeedaan beel waynta [[Daarood]]. Deegaanada oo reer darawiish u gaar ah oo in kabadan 40 kun ee dad ku nool, waxaa ka mid ah hareeraha Fiqifuliye, Las Anod, Buuhoodle iyo [[Marqaanweyne]]. Dhaqanka Dhullbahante waa mid ka salaysan halgankii gumeysi-diid ee [[Dareema Caddo]] iyo [[Taleex]] ka gilgishey, ee aragtida ka dhiibta arrimaha Soomaaliya ee saamaynta tooska ah ku leh siyaasadda, iyagoo halgankii xornimo doonka gacan wayn kagaystay. Dhulbahante oo loogu yeedho daraawiish sababtuna ay tahay waxay ahaayee dadkii aas aasay oo hir galiyey dawladii islaamiga ahyd oo kadhisnayd gobolada SSC taasoo ay soomalida ugu yeeraan daraawiishta .
 
 ==Beesha==
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]], wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
