*Empty MediaWiki Message*

--- a/Wikipedia:Soo_Bandhigga_Sawirka_Xulka.mw
+++ b/Wikipedia:Soo_Bandhigga_Sawirka_Xulka.mw
@@ -13,6 +13,10 @@
 |}
 </div>
 
+Hassan gabood, waa aqoonyahan soomaaliyeed, ku hawlan in uu bulshadiisa ku soo kordhiyo afkaaro iyo adeegyo cusub oo la ma jeerto.
+
+Waa aqoonyahan ka soo jeeda Gobolka Sanaag, ku soo barbaraay kuna soo qaadatay waxbarashadii asaasiga ahayd ilaa tii dugsiga sare, jaamacadana heerka kowaad ka qaatay jaamacad ku taalla magaalada Hargaysa oo la dhoho Jaamacada Hargaya.
+
 == Soo bandhigista sawirka ==
 <!-- Waxaa la rajeynayaa inaad ku dari doonto soo bandhigista sawirka qaybtaan hoose -->
 
