--- a/Gudmo_biyocas.mw
+++ b/Gudmo_biyocas.mw
@@ -14,11 +14,10 @@
 |
 }}
 
-Degmada gudmo biyo cas waxa dega Basanbuur [[Biciide]] oo  habarjecla  waa degmo ku caan ah beeyada iyo xabagta waa degmo dhaqaaleheedu aad u badanyahay waxa kale oo ay caan ku tahay xaga beeraha iyo wax soo saarka, dadkeedu wuxuu ku tiirsanyahay beeraha beeyada iyo xabagta iyo xoolaha nool. 
-Waxa galbeed ka xiga degmada [[Harti yimid|Ceel afweyn.]]
+Degmada gudmo biyo cas waxa dega Bahsanbuur [[Biciide]] oo ah habarjecla  waa degmo ku caan ah beeyada iyo xabagta waa degmo dhaqaaleheedu aad u badan yahay waxa kale oo ay caan ku tahay xaga Xoolaha Nool, beeraha,Macdanta,kaluunka, Beeyadda iyo wax soo saarka, dadkeedu wuxuu ku tiirsanyahay beeraha beeyada iyo xabagta iyo xoolaha nool. 
+Waxa galbeed ka xiga degmada |Ceel afweyn [[Harti yimid]
 
-Waxaa ka soo jeeda siyaasiyiin, aqoonyahan iyo dad magac ku leh somaliland. 
-Waxa ka mid ah. 
+Waxaa ka soo jeeda siyaasiyiin, aqoonyahan iyo dad magac ku leh somaliland, Waxa ka mid ah. 
 
 Abwaan shire axmed  faarax (shire widhidhif)
 
@@ -29,6 +28,7 @@ Abwaan awcilmi ducaale
 Abwaan jaamac camale yuusuf
 
 Abwaan dhegawanle
+Abwaan Mirre Saleh
 
 Abwaan jaamac axmed faarax ( jaamac cadde oo ah ninkii aas aasay magaalada gudmo ee meheradii u horaysey ka furtay. 
 
