*Empty MediaWiki Message*

--- a/Wabiga_Shabeelle.mw
+++ b/Wabiga_Shabeelle.mw
@@ -22,7 +22,7 @@
 [[File:Jubbarivermap.png|thumb|maabka wabiga shabeelle]]
 
 [[File:Wabi_shabelle.jpg|thumb|]]
-'''Wabiga Shabeelle''' ({{lang-en|Shebelle River}}; {{lang-it|Uebi Scebeli}}) waa [[webi]] ka soo bilaabma [[Itoobiya|deegaanada sare ee Itoobiya]] kaasi oo dhexmara koonfurbari wadanka [[Soomaaliya]] ilaa uu ka gaadho [[Badweynta Hindiya]] oo uu ku dhamaado. 
+'''Wabiga Shabeelle''' ({{lang-en|Shebelle River}}; {{lang-it|Uebi Scebeli}}) waa [[webi]] ka soo bilaabma [[Itoobiya|deegaanada sare ee Itoobiya]] ee goobaha [[Ogadenia]], kaasi oo dhexmara koonfurbari wadanka [[Soomaaliya]] ilaa uu ka gaadho [[badda Soomaaliyeed]] oo uu ku dhamaado. 
 
 Intaas waxaa dheer in webigani ka soo burqada dhulka sare  buuraleyda wadanka [[itoobiya]] isagoo soo aadka koofur bari [[soomaaliya]],aa wabiga ugu dheer dalka [[Soomaaliya]] wuxuuna dhaxmaraa gobolada Hiiraan [[Shabeellaha Hoose]] iyo [[Shabeellaha Dhexe]]. Dhulalka uu maro waxay caan ku yihiin dhulbeereedka.
 
