--- a/Dishiishe.mw
+++ b/Dishiishe.mw
@@ -21,7 +21,7 @@
 '''Dishiishe''' waa qabiil ka mid ah qabiilada [[Mooracase]] ee [[Daarood]] kana sii ah [[Harti]]. Qabiilkaan waxuu ku badanyahay woqooyiga gaar ahaan gobolada [[Bari]] & [[Sanaag]], degaano ka mid ah dalalka [[Carabta|Cumaan]] iyo [[Yemen|Yemen]]. Beeshaani waxay leedahay Ugaastooyo soo jireen ah oo maamuli jirtay deegaanada beeshu degto, sidoo kale beeshaani waxay gundhig u tahay Horumarka dhaqaale, Ilbaxnimo iyo Amni ee ka hana qaaday gobolada Woqooyi Bari soomaaliya wixii ka dambeeyay Burburkii dowladii dhexe ee dalka, Waana beel bulshooyinka Soomaaliyeed ku soo dhoweysay deegaanadeeda oo ay ugu horayso Magaalada [[Boosaaso]].
 [[File:Somalia_tribes1977.jpg|thumb|right|250px|Map Muujinaya qayb ahaan sida ay u kala degaan qabaa'ilka Soomaalida.<ref>{{cite web|url=http://www.lib.utexas.edu/maps/somalia.html|title=Somalia Maps - Perry–Castañeda Map Collection - UT Library Online|author=|date=|website=www.lib.utexas.edu|accessdate=6 April 2018}}</ref>]]
 
-==Daarood==
+Ajtyieh=Daarood==
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe ), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
 Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid yihiin: [[Mareexaan]], [[Ogaadeen (beel)|Ogaadeen]], [[Harti]] ([[Reer Darawiish]], [[Dishiishe]], [[Majeerteen]] iyo [[Warsangali]]), [[Lailkase]] iyo beelo kale.
 
