*Empty MediaWiki Message*

--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -60,7 +60,7 @@
 }}
 [[File:Sacmadeeqa ee u dhow ceelka Qoob-Fardood.jpg|thumb|[[Sacmadeeqa]] waa taallo ee u dhow ceelka Qoob Fardood ee xaafadda Buuhoodle.]]
 
-Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darawiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[reer darawiish]] wax ka taliya.
+Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darawiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Sacmadeeqa]] (1898 - 1899). Labo Degmo ayaa ku yaal hareeraha Buuhoodle, waa na [[Dareemo Caddo]] iyo [[Sacmadeeqa]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[reer darawiish]] wax ka taliya.
 
 Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Waana magalada ee ugu dadka badan dhulka [[reer darawiish]] marka laga tago Laascaanood iyo [[Marqaanwayne]], iyo hareeraha [[Fiqifuliye]].
 
