*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -85,4 +85,6 @@ Gomez wuxuu hormuud u ahaa heesaha kooxdii hore ee Selena Gomez & the Scene kaas
 * [[Live in Concert]] (2009–2010)
 * [[A Year Without Rain Tour]] (2010–2011)
 * [[We Own the Night Tour]] (2011–2012)
+
+== Tixraacyada ==
 [[category:fanaaniinta maraykanka]] [[category:maraykanka]]
