--- a/Dua_Lipa.mw
+++ b/Dua_Lipa.mw
@@ -1,5 +1,4 @@
-'''Dua Lipa''' (waxay dhalatay 22 Agoosto 1995) waa fanannd Ingiriis ah,oo ah qoraaga heesaha iyo model. Ka dib markii ay u shaqeysay sidii moodeelo ahaan, waxay la saxiixatay '[[Warner Music Group|''Warner Music Group'']]' sanadkii 2015 waxayna sii deysay albumkeedii ugu horreeyay ee ay "[[Dua Lipa (Album)|Dua Lipa]]" waxayna soo saartay sagaal heesood oo ay ku jiraan "Be the One" iyo "IDGAF"  ", iyo lambarka koowaad ee Boqortooyada Midowday "New Rules", oo sidoo kale gaadhay lambarka lixaad ee Mareykanka. Sanadkii 2018, Lipa waxay ku guuleysatey abaalmarinta Boqortooyada Ingiriiska ee ''British Female Solo Artist'' iyo ''British Breakthrough Act.''{{Infobox musical artist|name=Dua Lipa|image=Dua Lipa 02 12 2018 -2 (40157502064).jpg|image_size=|caption=Lipa magaalada [[Los Angeles]] bishii Febraayo 2018|birth_name=|birth_date={{birth date and age|1995|8|22}}|birth_place=Westminster, London, England|background=solo_singer|genre={{hlist|[[Pop]]<ref>{{cite web |last=Yeung |first=Neil Z. |url=http://www.allmusic.com/artist/dua-lipa-mn0003426731/biography |title=Dua Lipa {{!}} Biography & History |publisher=[[AllMusic]] |accessdate=15 July 2017}}</ref>|synth-pop|R&B<ref>{{cite web |last=Green |first=Chris |url=https://www.independent.co.uk/arts-entertainment/music/reviews/dua-lipa-o2-abc-glasgow-review-jazz-infused-songs-recall-a-smoke-filled-cabaret-bar-a6836606.html |title=Dua Lipa, O2 ABC, Glasgow, review: Jazz-infused songs recall a smoke-filled cabaret bar |work=[[The Independent]] |date=27 January 2016 |accessdate=22 July 2016}}</ref>|[[dream pop]]|dark pop<ref>{{Cite news|url=https://www.irishtimes.com/culture/music/pop-corner-dua-lipa-saves-the-last-dance-adele-is-done-with-james-bond-1.2597650|title=Pop Corner: Dua Lipa saves the Last Dance; Adele is done with James Bond|work=[[The Irish Times]]|access-date=2 September 2017}}</ref>
-}}|occupation={{flat list|
+'''Dua Lipa''' (waxay dhalatay 22 Agoosto 1995)<ref>https://www.allmusic.com/artist/dua-lipa-mn0003426731/biography</ref>, waa fanannd Ingiriis ah,oo ah qoraaga heesaha iyo model. Ka dib markii ay u shaqeysay sidii moodeelo ahaan, waxay la saxiixatay '[[Warner Music Group|''Warner Music Group'']]' sanadkii 2015 waxayna sii deysay albumkeedii ugu horreeyay ee ay "[[Dua Lipa (Album)|Dua Lipa]]" waxayna soo saartay sagaal heesood oo ay ku jiraan "Be the One" iyo "IDGAF"  ", iyo lambarka koowaad ee Boqortooyada Midowday "New Rules", oo sidoo kale gaadhay lambarka lixaad ee Mareykanka. Sanadkii 2018, Lipa waxay ku guuleysatey abaalmarinta Boqortooyada Ingiriiska ee ''British Female Solo Artist'' iyo ''British Breakthrough Act.''{{Infobox musical artist|name=Dua Lipa|image=Dua Lipa By Daniel Åhs Karlsson.jpg|image_size=|caption=|birth_name=|birth_date={{birth date and age|1995|8|22}}|birth_place=Westminster, London, England|background=solo_singer|genre=|occupation={{flat list|
 * Fanaan
 * jilaa
 }}|instrument=|years_active=2015–xaadir|label={{flat list|
