*Empty MediaWiki Message*

--- a/Camila_cabello.mw
+++ b/Camila_cabello.mw
@@ -21,4 +21,6 @@
 * [[Taylor Swift]] – Reputation Stadium Tour(2018)
 
 == nolosha ==
-Cabello wuxuu ku dhashay [[Havana]], [[Kuuba|Cuba]] ilaa '''Sinuhe Estrabao''' iyo '''Alejandro Cabello''', wuxuuna ku koray magaalada Cojímar ee Bariga Havana. Aabaheed wuxuu ku dhashay [[Meksiko|Mexico City]] waa nin reer Mexico ah oo u guuray Cuba. Waxay leedahay walaashiis ka yar oo la yiraahdo '''Sofia'''. Cabello iyo qoyskeeda inta badan nolosheeda hore waxay u dhaqaaqeen dhanka iyo hore inta udhaxeysa Havana iyo Mexico City. Markii Cabello shan jir ahayd, waxay u guurtay Miami, Florida, ee dalka Mareykanka, iyada iyo hooyadeed; aabaheed wuu awoodi waayey inuu helo fiiso waqtigaas, wuxuuna ku biirey qoyska qiyaastii 18 bilood kadib.Cabello waxay qaadatay dhalashada Mareykanka sanadkii 2008.
+Cabello wuxuu ku dhashay [[Havana]], [[Kuuba|Cuba]]<ref>"Camila Cabello: 'Our Dreams Were Bigger Than Our Fears'"</ref><ref>"Biography & History"</ref> ilaa '''Sinuhe Estrabao''' iyo '''Alejandro Cabello''', wuxuuna ku koray magaalada Cojímar ee Bariga Havana. Aabaheed wuxuu ku dhashay [[Meksiko|Mexico City]] waa nin reer Mexico ah oo u guuray Cuba. Waxay leedahay walaashiis ka yar oo la yiraahdo '''Sofia'''<ref>"Camila Cabello's Empowering Message About Her Sister Is So Important"</ref>. Cabello iyo qoyskeeda inta badan nolosheeda hore waxay u dhaqaaqeen dhanka iyo hore inta udhaxeysa Havana iyo Mexico City. Markii Cabello shan jir ahayd, waxay u guurtay Miami, Florida, ee dalka Mareykanka, iyada iyo hooyadeed; aabaheed wuu awoodi waayey inuu helo fiiso waqtigaas, wuxuuna ku biirey qoyska qiyaastii 18 bilood kadib<ref>"Camila Cabello: 'Our Dreams Were Bigger Than Our Fears'"</ref><ref>"Camila Cabello shares immigration story"</ref><ref>"Cabello Going Solo"</ref><ref>"Camila Cabello Is Writing Music About Her Family's Journey From Cuba: 'I Want to Make a Love Song for Immigrants'"</ref>.Cabello waxay qaadatay dhalashada Mareykanka sanadkii 2008<ref>https://time.com/collection/american-voices-2017/4927699/american-voices-camila-cabello/</ref>.
+
+== Tixraacyada ==
