*Empty MediaWiki Message*

--- a/Fabio_Strinati.mw
+++ b/Fabio_Strinati.mw
@@ -1,3 +1,3 @@
 '''Fabio Strinati''' (San Severino Marche 19 Janawari 1983) waa gabayaa reer Talyaani ah, qoraa iyo Esperantist.
 
-Aqoonyahanka qowmiyada tirada yar, wax ka qoray kooxaha qowmiyadeed Soomaalida: Abgal, Hauia, Ybir. Wuxuu qoray buugaag badan oo gabayo ah. Gabayadiisa ayaa la tarjumay luqado badan.
+Aqoonyahanka qowmiyada tirada yar, wax ka qoray kooxaha qowmiyadeed Soomaalida: Abgal, Hauia, Yibir. Wuxuu qoray buugaag badan oo gabayo ah. Gabayadiisa ayaa la tarjumay luqado badan.
