--- a/Hodan.mw
+++ b/Hodan.mw
@@ -149,5 +149,5 @@ Shineemooyinkii dagaalada ka dib:
 Saldhiga booliska oo kuyaalla shaneemo kaasababalaare agteeda
 Shaleemo qodxaaleey albaroko akteeda 
 Shaleemo walaalaha 
- 
+ Shaleemada c/rasaaq timo Wayne (barakooyi)
 {{Degmooyinka Gobolka Banaadir}}
