--- a/Hodan.mw
+++ b/Hodan.mw
@@ -141,6 +141,7 @@ Lambar afar ('''KM 4''')Kilomitir foor
 * Shineema Kaasa-Bobalaare 
 * Shineema Ekwatoore 
 * Shineema Shiirkole Offishaale
+*Shaleemada c/rasaaq timo Wayne (barakooyi)
 
 Shineemooyinkii dagaalada ka dib:
 * Shineema Aweys Hurdaaye
@@ -149,5 +150,5 @@ Shineemooyinkii dagaalada ka dib:
 Saldhiga booliska oo kuyaalla shaneemo kaasababalaare agteeda
 Shaleemo qodxaaleey albaroko akteeda 
 Shaleemo walaalaha 
- Shaleemada c/rasaaq timo Wayne (barakooyi)
+ 
 {{Degmooyinka Gobolka Banaadir}}
