*Empty MediaWiki Message*

--- a/Xoolo.mw
+++ b/Xoolo.mw
@@ -8,7 +8,67 @@ Xoolaha waxaa ka mid ah [[lo']]da, [[adhi]]ga, [[geel]]a, [[faras|fardaha]], [[d
 
 Guud ahaan xooluhu waa xayawaanka aadamuhu dhaqdaan ee la cuno [[hilib]]kooda lana cabo [[caano|caanahooda]], loo isticmaalo in la rarto, la fuulo (rakaab), [[beer]]aha lagu qoto iyo wixii la mid ah. 
 
-= Taariikhda Xoolaha =
+= Taariikhda Xoolaha ="Geela haddey naceen annaga macaawino ahaan hannoo siiyaan"
+Cabdishakuur Casoowe
+Nairobi
+8 Jannaayo 2020
+.
+XIGASHADA SAWIRKA,GETTY IMAGES
+Qoraalka sawirka,
+Gela waxaa markii ugu horreysay Australia la geeyay qarnigii 19-aad
+
+In ka badan 10,000 oo geel ah ayaa lagu tooganayaa waddanka Australia, gaar ahaan dhinaca koonfureed ee dalkaas, ka dib markii ay dadka biyaha ku ciriiriyeen xilli ay jiraan kuleyl daran iyo abaar baahsan.
+
+Maanta oo Arbaco ah ayaa la billaabay leynta geela oo loo adeegsanayo diyaaradaha qumaatiga u kaca iyo rasaas.
+
+Tallaabadan ayaa la qaaday ka dib markii ay dadka ku dhaqan gobolkaas ka cawdeen geela oo guryahooda ka dhameysanaya biyaha.
+
+Waxaa lasoo tabiyay in geel koox koox u socda uu waxyeelleeyay guryo iyo magaalooyin.
+
+"Waxay ku wareegayaan waddooyinka, iyagoo biyo raadinaya. Waxaan xitaa u cabsaneynaa carruurteenna", ayuu yiri mid ka mid ah dadka deegaanka.
+
+Muddo shan maalmood ah ayaa la wadi doonaa howlgalka lagu leynaypo geela Koonfurta Australia.
+
+Yurub oo geel argagixisada lagula dagaallamayo siisay dal Afrikaan ah
+Makhaayad dadka qaarkood aanu kaftanku u furnayn
+Sidoo kale qaar ka mid ah fardaha ku dhaqan gobolkaas ayaa la dili doonaa.
+
+Rag ay wajiyada u daboolan yihiin oo ka socda waaxda arrimaha deegaanka iyo biyaha ee Australia ayaa loo xil-saaray inay toogtaan geela iyo fardaha kumannaanka ah.
+
+Gobolka geela lagu baabi'inayo ee Anangu Pitjantjatjara Yankunytjatjara (APY) waxaa daggan dadka asalka ah ee u dhashay Australia.
+
+Soomaalidu sidey u arkaan geela la leynayo?
+.
+XIGASHADA SAWIRKA,GETTY IMAGES
+Abuukar Xaaji Xaashi "Culusoow", waa nin ka ganacsada hilibka geela oo ku sugan Australia. Wuxuu ka hadlayaa sida ay u samaeyneyso leynta geela.
+
+"Muddo 15 sano ah ayaan ka ganacsadaa hilibka geela, waxaana ahay qofka kaliya ee ganacsigaas ku heysta waddankan. Maalin kasta oo Arbaco ah waxaan gowracaa ugu yaraan 3 neef, dadka ugu badan ee iga iibsada hilibkiisana waa Soomaali. Saameyn adag ayey nagu yeelaneysaa howshan geela lagu leynayo, waayo inta la dilo mooyee inta kale wey naga fogaanayaan, taasina waxay dhaawac weyn gaarsiineysaa ganacsiga hilibka geela", ayuu yiri.
+
+'Geela haddey naceen annaga macaawino ahaan hannoo siiyaan ama aan ka doonanno'
+Dadka Soomaalida ah geelu wuxuu agtooda ka yahay hantida ugu qaalisan adduunka, waxayna dhaqan u leeyihiin dhaqashadiisa.
+
+Taariikh ayey Soomaalidu u leeyihiin xannaaneynta geela, wayna isugu faanaan, halka qaarkood ay isku sooraan, magta isaga bixiyaan ama yarad ahaan u kala qaataan.
+
+Dhinaca Suugaanta xitaa waxay abwaanno badan ku ammaaneen geela.
+
+
+Dubad Cali Cameey, oo guddoomiyaha guddiga suuq-geynta xoolaha ee dalka Kenya ayaa muujiyay sida uu uga xun yahay go'aanka ay dowladda Australia ku qaadatay inay ku yareyso tirada geela ku nool waddankeeda.
+
+"Geelu wuxuu ugu faa'iido badan yahay duunyada aan dhaqanno, waana laf-dhabarta xooladhaqatada. Xitaa marka uu dadku isdilo waxa la kala qaato waa geel. Marka nimanka geela leynaya ma yaqaannaan waxa uu geelu yahay, waana arrin nagu xanuun badan haddaan Soomaali nahay. Aniga waxay ila tahay, haddii ay naceen, Australia maadaama ay ka mid tahay waddamada mucaawinada bixiya inay annaga geela na siiso, ama ay na tiraahdo soo doonta", ayuu yiri Dubad Cameey.
+
+Maxaa Soomaalida ka galay geela Australia?
+Cabdullaahi Carab Ismaaciil oo ka mid ah dadka geela ku dhaqda Somaliland ayaa su'aashaas uga jawaabay BBC-da.
+
+"Waxaan aaminsan nahay in Geela Australia jooga halkan laga qaaday, arrinta kale ee na damqineysana waa in geelii qiimaha badan noo lahaa la iska leynayo, taas ayaana aad uga xun nahay. Geelu waa kan marka la dagaallamo naf dhan oo go'day la kala siisto, loogana samro", ayuu yiri Cabdullaahi.
+
+Cimilada sababtay in Geela la laayo
+.
+XIGASHADA SAWIRKA,GETTY IMAGES
+Australia ayaa xilligan oo kale sanad walba waxaa ka jira cimilo aad u kulul, taasoo sababta inuu kuleyl dartiis dab uga kaco keymaha.
+
+Ku dhawaad 2,000 oo guri ayaa ku gubatay dabkii saameynta ku yeeshay waddankaas bilihii lasoo dhaafay.
+
+Ugu yaraan 25 ruux ayaa ku dhintay musiibadaan tan iyo bishii September ee sanadkii lasoo dhaafay.
 
 = Noocyada Xoolaha =
 
