*Empty MediaWiki Message*

--- a/Meheri.mw
+++ b/Meheri.mw
@@ -29,6 +29,7 @@ Beesha Meheri ismaaciil waxaa ka dhashay dad faro badan oo soomali magac ku laha
 
 * Hasan Saalah 
 * Cumar Muuse
+* Yaxye Saalax
 * Reer Timo dheere
 
   * Reer mashowle
