--- a/Meheri.mw
+++ b/Meheri.mw
@@ -17,7 +17,7 @@
 '''Beesha Meheri''' (Carab Saalax) Waa beel ama qabiil soomaaliyeed, Beeshu waxay taarikh dheer ku leeyihiin ladagalamkii gumeystihi taliyaniga,ingriska ee dalka haystay. Waa beel lagu yaqano nabada, dariswanaga iyo xiriir wanagsan ee kala dhaxeyo beelaha kale ee somaliyeed. Marka laga hadlayo dhaqashada xoolaha beesha waxay caan ku yihiin dhaqashada Geela, Ariga,lo'da iyo Fardaha. Meheri Ismaaciil Waxay degaan Maamulada Puntland, Galmudug, Jubaland, Koonfur Galbeed, Somaliland  Hirshabeele iyo Caasimada Soomaliya ee Muqdisho. Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen soomaaliya iyo wadamada carabta oo dhan. Waana dad ganacsato ahaan jiray ahna ilaa iyo hada, waa dad kii isku xiray soomaaliya iyo wadamada carabta iyo wadamada bariga iyo bartamaha afrika. Beesha waxaa lagu tilmaamaa qabiil Diinta raacda, daris wanaagsan, nabadana jecel, had iyo jeerna daryeela dadka la dagan. 
 
 
-Beesha Meheri ismaaciil waxaa ka dhashay dad faro badan oo soomali magac ku lahaa sida Sarakiil, Aqoonyahano, Culmaa'udiin , Ganaacsato, Abwaano, xubno ka mida ahaa SYL iyo dad faro badan oo gayiga Soomaliyeed caan ka ahaa caan Ka ahaaa. Meheri Ismaaciil waa beel balaran qaybaha hoose ee ay u kala baxdo waxaa ka mida (sub-clans):  
+Beesha Meheri  waxaa ka dhashay dad faro badan oo soomali magac ku lahaa sida Sarakiil, Aqoonyahano, Culmaa'udiin , Ganaacsato, Abwaano, xubno ka mida ahaa SYL iyo dad faro badan oo gayiga Soomaliyeed caan ka ahaa caan Ka ahaaa. Meheri Ismaaciil waa beel balaran qaybaha hoose ee ay u kala baxdo waxaa ka mida (sub-clans):  
 
  * Ismail Mohamud 
  * Ali Mohamud 
