*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -46,6 +46,10 @@
 
 '''Galmudug State''' ([[Arabic]]: ''غامدوغ''), ({{lang-it|Galmudugh}}, officially '''Galmudug State''' ''(''[[Somali language|Somali]]'': Dowlad goboleedka Galmudug ee Soomaaliya)'' waa dowlad goboleed ka tirsan Jamhuuriyadda Federaalka [[Soomaaliya]], taasoo magaala madaxdeedu tahay [[Dhusamareb]]. Galmudug waxay xuduud la wadaagtaa dhanka waqooyi dowlad goboleedka [[Puntland]], halka dhanka galbeed ay deris kala tahay [[dhulka soomalidda ethiopia]], dhanka koonfur waxay deris la tahay dowlad goboleedka [[Hirshabelle]], iyadoo dhanka beri deris kala ah [[Badweynta Hindiya]]. 
 
+Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Galmudug'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayyidka]] hogaaminayay oo xarunta ahayd [[Taleex]] waqtiga gumeysiga.
+
+
+==Dawlad==
 Xarunta baarlamaanka galmudug waa cadaado.
 
 Waxaa Galmudug xilka madaxweyne haatan kursiga ku fadhiya Madaxweyne [[Ahmed Abdi Kariye]].
