--- a/Puntland.mw
+++ b/Puntland.mw
@@ -47,6 +47,9 @@
                                                                                        
 '''Puntland''' ama Buntland [[Af-Carabi]]:( أرض البنط) waxay si rasmi ah u tahay  '''Dowlad goboleedka Puntland''', waa maamul goboleed ku yaalo woqooyi bari ee dalka [[Somaaliya]]. Maamulkaan caasimadiisa waa [[Garoowe]] ee gobolka [[Nugaal]]. Puntland waxee xuduud la leedahay [[Somaliland]] oo ka xigta [[Galbeed]]ka iyo [[Gacanka Cadmeed]] oo ka xiga [[Woqooyi]]ga, dhinaca [[Bari]]ga neh waxaa ka xiga [[Marinka Gardafuul]] iyo [[Badda Soomaal]]. Dhinaca [[Koonfur]]ta neh waxaa ka xigo Gobolada dhexe ee soomalia, gaar ahaan [[galmudug]], [[Koonfur]] [[Galbeed]] neh waxaa ka xiga wadanka [[Itoobiya]]. Puntland waxaa degan 1 kiiba 3 shacabka somalia oo dhan, waxaa degan dad ka badan 4 miliyan oo qof. Magaca Puntland waxuu kayimi dhulkii uduga oo ay aqoonjireen ganacsato carbeed gaar ahaana masaarida oo gobolada waqooyi bari kadhoofsan jiray uduga sida kumanaan sano kahor, Itoobiya puntland ayuu dalkiisa ku xukumaa, itoobiyana puntland ayey heestaa.
 
+Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Puntland'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo xarunta ahayd Taleex waqtiga gumeysiga.
+
+
 == Dawladda Puntland ==
 Dawladda Puntland ee somaliyeed waxaa la asaasay 1998kii, waxaana asaasay isimo ,siyaasiyiin,ganacsato,culimaa,udiin ,haween dadka ugu caansanaa ee isugu yimi shirkii GAROWE kadhacay 1998 waxaa kamid ahaa madaxweynihii hore ee Dawladda DFKMG [[Cabdullaahi Yuusuf Axmed]], Ibrahim Abshir Ibrahim, Beeldaaje Xaaji Cabdullahi, Suldaan Ciise Xasan Cumar, [[Ugaas Yaasiin Ugaas Cabdirixmaan| Ugaas Yaasiin]], Suldaan Saciid Cabdisalaan, Islaan Maxamed iyo Garaad Jaamac ,sababta loo sameeyay maamulkaan wuxuu ahaa si loo badbaadiyo shacabka woqooyiga. Maamulka puntland aad ayuu uuga duwanyahay maamulka kale ee somaliland. Puntland ma raadinooso kala goynta dalka somalia, dadkaan waa dad wadaniyiin ah . shacabka puntland run ahaantii waa dad markasto raadiyo isku keenta shacabka soomaaliyeed. Puntland waxee leedahay maamul xukumo iyo barlamaan u gooni ah iyo wasiiro maamulo shacab woqooyiga. Madaxweynihii ugu horeeyay ee puntland woxoo ahaa Cabdullahi Yuusuf, waxaa ku xigay Maxamed Abdi Xaashi waxaa ku xigay Cade Muuse waxaa ku sii xigay Cabdiraxmaan Maxamuud faroole, Hadana waxaa xilka hayya Cabdiwali Maxamed Cali.
 
