--- a/Puntland.mw
+++ b/Puntland.mw
@@ -47,7 +47,7 @@
                                                                                        
 '''Puntland''' ama Buntland [[Af-Carabi]]:( أرض البنط) waxay si rasmi ah u tahay  '''Dowlad goboleedka Puntland''', waa maamul goboleed ku yaalo woqooyi bari ee dalka [[Somaaliya]]. Maamulkaan caasimadiisa waa [[Garoowe]] ee gobolka [[Nugaal]]. Puntland waxee xuduud la leedahay [[Somaliland]] oo ka xigta [[Galbeed]]ka iyo [[Gacanka Cadmeed]] oo ka xiga [[Woqooyi]]ga, dhinaca [[Bari]]ga neh waxaa ka xiga [[Marinka Gardafuul]] iyo [[Badda Soomaal]]. Dhinaca [[Koonfur]]ta neh waxaa ka xigo Gobolada dhexe ee soomalia, gaar ahaan [[galmudug]], [[Koonfur]] [[Galbeed]] neh waxaa ka xiga wadanka [[Itoobiya]]. Puntland waxaa degan 1 kiiba 3 shacabka somalia oo dhan, waxaa degan dad ka badan 4 miliyan oo qof. Magaca Puntland waxuu kayimi dhulkii uduga oo ay aqoonjireen ganacsato carbeed gaar ahaana masaarida oo gobolada waqooyi bari kadhoofsan jiray uduga sida kumanaan sano kahor, Itoobiya puntland ayuu dalkiisa ku xukumaa, itoobiyana puntland ayey heestaa.
 
-Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Puntland'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo xarunta ahayd Taleex waqtiga gumeysiga.
+Waardiyaha puntland ee la yidhaahdo ''ciidanka daraawiishta Puntland'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo xarunta ahayd Taleex waqtiga gumeysiga.
 
 
 == Dawladda Puntland ==
