*Empty MediaWiki Message*

--- a/Hirshabeelle.mw
+++ b/Hirshabeelle.mw
@@ -1,4 +1,10 @@
-[[File:Regioni federali Somali.png]]
+[[File:Regioni federali Somali.png|thumb|200px|maamul]]
+Hirshabelle waa maamul goboleed ee Soomaali ah. Goobaha Hirshabelle wuxuu la simanyahay soohdinaha maamulka Italian benadir Company waqtiga Gumeysiga.
+
+Waardiyaha Hirshabelle ee la yidhaahdo ''ciidanka daraawiishta Hirshabelle'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo caasimada ahayd Taleex waqtiga gumeysiga.
+
+
+==Gobol==
 Gobolka hiiraan 
 
 Degmoyinka 
