*Empty MediaWiki Message*

--- a/Hirshabeelle.mw
+++ b/Hirshabeelle.mw
@@ -1,5 +1,5 @@
 [[File:Regioni federali Somali.png|thumb|200px|maamul]]
-Hirshabelle waa maamul goboleed ee Soomaali ah. Goobaha Hirshabelle wuxuu la simanyahay soohdinaha maamulka Italian benadir Company waqtiga Gumeysiga.
+Hirshabelle waa maamul goboleed ee Soomaali ah. Goobaha Hirshabelle wuxuu la simanyahay soohdinaha maamulka Benadir Company waqtiga Gumeysiga.
 
 Waardiyaha Hirshabelle ee la yidhaahdo ''ciidanka daraawiishta Hirshabelle'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo caasimada ahayd Taleex waqtiga gumeysiga.
 
