*Empty MediaWiki Message*

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -29,7 +29,7 @@
 
 '''Jubaland''' waa mid kamid ah maamul goboleed yada ka jira [[Soomaaliya]]. jubaland waxay dhacdaa Koondurta Fog ee [[Soomaaliya]]  magaca Jubaland waxu jiray kahor Xiligii Gumeystaha Talayaaniga xiligaas Jubba Waxaa la isku oron jiray dhulka Hadda loogu yeero Jubaland iyo Bay iyo Bakool kuwaas oo markii danbe laga jaray Jubba.
 
-Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Galbeed 
+Jubaland waxay soohdin la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Galbeed. Waardiyaha Jubaland ee la yidhaahdo ''ciidanka daraawiishta jubaland'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayidka]] hogaaminayay oo caasimada ahayd Taleex waqtiga gumeysiga.
 
 == Dagmooyinka Jubaland ==
 [[Bardhere]]
