*Empty MediaWiki Message*

--- a/Laascaanood.mw
+++ b/Laascaanood.mw
@@ -60,7 +60,7 @@
 
 '''Laascaanood''' ({{lang-en|''Las Anod''}}, {{lang-ar|لاسعنود}}) waa magaalo oo ka tirsanayd xarunta [[daraawiish]]ta wakhtiga qarnigii 19ka iyo labada tobanaansho oo ku xigayd, oo ilaa maanta [[beesha Darawiish]] ku badhan. Wuxuu caasimad ka yahay gobolka [[Sool]] ee jamhuuriyadda [[Somaliland]]. Magaaladaan waxay qayb ka tahay meelaha goobaha ahayd daraawiishtii ilaa 1921, intii aaneey la wareegin ciidamadii gumaysiga ee xukumayey [[Somali Coast Protectorate]]. Laascaanood waxaa ku nool dad ka soo jeeda beelaha [[reer darawiish]], iyo tirada [[reer darawiish]] waxa lagu qiyaasaa 99 boqolleey (%).
 
-Dadka ku nool oo Las Anodiyaan ama Las Anodi loo bixiyo, waa dad oo aaminsan fikrada [[darwiishnimo]] ama [[darwiishnimada]]. Waa sababaha ka mid ah ay dadka ku nool isku bixiya [[reer Darwiish]].
+Dadka ku nool oo Las Anodiyaan ama Las Anodi loo bixiyo, waa dad oo aaminsan fikrada [[darawiishnimo]] ama [[darawiishnimada]]. Waa sababaha ka mid ah ay dadka ku nool isku bixiya [[reer Darwiish]].
 
 ==Goboleedyaal==
 Waxaana ay ku taala meelaha Somaliland ugu quruxda badan amaana ku dhex leh bulshada gobolada bari 'waxaana gabayo ka mid ahaa(( laani waa ta laaska ka laad laada)) waxay kaloo xuddun u ahayd xisbigii siyaasadeed ee USP oo ahaa mid guulo badan ka gaadhay dhanka Siyaasadda '., waaxana ku yaala magaalada laascaanood dhexdeeda labada buureed we igu dhaadher gobolka sool laguna magacaabo buuraha sayid mohamed cabdulle hassan 'waana magaalo aad muhiim u ah dhanka dhulka amaba siyaasad ahaan oo group walba siyaasad wataa uu jecelyahay inay ka mid ahaato dhankiisa hada waxaa ku sugan kana aramiya Dawlada Khaatumo State ,magaaladaan waxey u dhaxeesaa Gobolada [[Sanaag]], [[Nugaal]] Iyo Somaliland Magaalada waxaa ku dhaqan dad gaarayaa ilaa 320 kun oo qof. Laascaanood waxey ka midtahay magaalooyinka taariikhiga ah.
