*Empty MediaWiki Message*

--- a/Laascaanood.mw
+++ b/Laascaanood.mw
@@ -58,7 +58,7 @@
 |footnotes              = 
 }}
 
-'''Laascaanood''' ({{lang-en|''Las Anod''}}, {{lang-ar|لاسعنود}}) waa magaalo oo ka tirsanayd xarunta [[daraawiish]]ta wakhtiga qarnigii 19ka iyo labada tobanaansho oo ku xigayd, oo ilaa maanta [[beesha Darawiish]] ku badhan. Wuxuu caasimad ka yahay gobolka [[Sool]] ee jamhuuriyadda [[Somaliland]]. Magaaladaan waxay qayb ka tahay meelaha goobaha ahayd daraawiishtii ilaa 1921, intii aaneey la wareegin ciidamadii gumaysiga ee xukumayey [[Somali Coast Protectorate]]. Laascaanood waxaa ku nool dad ka soo jeeda beelaha [[reer darawiish]], iyo tirada [[reer darawiish]] waxa lagu qiyaasaa 99 boqolleey (%).
+'''Laascaanood''' ({{lang-en|''Las Anod''}}, {{lang-ar|لاسعنود}}) waa magaalo oo ka tirsanayd xarunta [[daraawiish]]ta wakhtiga qarnigii 19ka iyo labada tobanaansho oo ku xigayd, oo ilaa maanta [[beesha Darawiish]] ku badhan. Wuxuu caasimad ka yahay gobolka [[Sool]] ee jamhuuriyadda [[Somaliland]]. Magaaladaan waxay qayb ka tahay meelaha goobaha ahayd daraawiishtii ilaa 1921, intii aaneey la wareegin ciidamadii gumaysiga ee xukumayey [[Somali Coast Protectorate]] iyo [[USP]] ka dib. Laascaanood waxaa ku nool dad ka soo jeeda beelaha [[reer darawiish]], iyo tirada [[reer darawiish]] waxa lagu qiyaasaa 99 boqolleey (%).
 
 Dadka ku nool oo Las Anodiyaan ama Las Anodi loo bixiyo, waa dad oo aaminsan fikrada [[darawiishnimo]] ama [[darawiishnimada]]. Waa sababaha ka mid ah ay dadka ku nool isku bixiya [[reer Darwiish]].
 
