*Empty MediaWiki Message*

--- a/USP.mw
+++ b/USP.mw
@@ -1,4 +1,4 @@
 [[File:USP - United Somali Party.jpg|thumb|Calanka USP ee bulshada Warsangeli iyo Dhulbahante]]
-'''USP''' ama United Somali Party waxay ahayd jabhad, dawlad iyo dhaqdhaqaaq oo ujeedadeedu ahayd xorayneed oo ay ababuleen beelaha [[Harti Galbeed]] oo ka tirsan Warsangeli iyo [[reer darawiish]]. Waxaa ay ku jiraan shaqsiyaad ka mid ah  Mohamed Abdi Hashi oo madaxweynta ka ahaa USP. Mohamed Abdi Hashi wuxuu ahaa madaxa beesha Nugaaled iyo Maakhir xitaa. Jabhadan oo ilaa iminka uu ka sii taaganyahay raaskii guryihii ay dhiseen waxana ka mid ah xisbiga siyaasiga ah ee [[Khatumo]], [[Maakhir]] iyo [[Darwiishland]]. 
+'''USP''' ama United Somali Party waxay ahayd xisbi sanadka 1959kii dhanka Harti Waqooyi iyo Samaroon, iyo sanadihii 1980yadii iyo 1990yadii waxay ahayd jabhad, dawlad iyo dhaqdhaqaaq oo ujeedadeedu ahayd xorayneed oo ay ababuleen beelaha [[Harti Galbeed]] oo ka tirsan Warsangeli iyo [[reer darawiish]]. Waxaa ay ku jiraan shaqsiyaad ka mid ah  Mohamed Abdi Hashi oo madaxweynta ka ahaa USP. Mohamed Abdi Hashi wuxuu ahaa madaxa beesha Nugaaled iyo Maakhir xitaa. Jabhadan oo ilaa iminka uu ka sii taaganyahay raaskii guryihii ay dhiseen waxana ka mid ah xisbiga siyaasiga ah ee [[Khatumo]], [[Maakhir]] iyo [[Darwiishland]]. 
 
 [[Category:Taariikh]]
