--- a/Gadabuursi.mw
+++ b/Gadabuursi.mw
@@ -10,7 +10,7 @@
 [[File:Awdal_in_Somalia.svg|thumb|Gobolka [[Awdal]] waxaa dega beesha Gadabuursi.]]
 [[File:Adal.PNG|thumb|Deegaanada ay ka talineeysay [[boqor]]tooyadii [[Adal]] ee beesha Gadabuursi.]]
 
-'''Gadabuursi''' ({{lang-en|Gadaboursi}}, "Gadabuursi"; {{lang-ar|ﻏﺎﺩﺍﺑﻮﻭﺭﺳﻲ}}) (sidoo kale loo yaqaano ''Samaroon'') waa [[Beelaha Soomaalida|qabiil]] ka tirsan [[Dir|Beelaha Dir]], ee [[Dadka Soomaalida]] hadana uu ka arrimiyo maamulka [[Somaliland]] deegaanada Kilinka Shanaad ee [[Itoobiya]] iyo meelo ka mid ah wadanka [[Jabuuti]].<Ref>"[[ingiriis]]: Gadaboursi, "Gadabuursi"; [[carabi]]: ﻏﺎﺩﺍﺑﻮﻭﺭﺳﻲ, "Gadabuursiy""</ref> Beesha Gadabuursi waxay si rasmi ah u dagaan oo aad ugu badan yihiin isla markaana iska leeyihiin Gobolka [[Awdal]] ee dhacda waqooyiga dhulka [[Soomaali]]du degto.<Ref>"[[Awdal]] ee magaalo-madaxda u tahay [[magaalo|caasimada]] [[Borama]]"</ref> Waxaanay deegaan ahaan ku dhaqan yihiin degmooyinka [[Boorama]], [[Baki]], [[Lughaya]] iyo [[Saylac]]. Dhinaca wadanka Itoobiya, beeshu waxay deegaan rasmi ah ku leedahay Degmada [[Awbare]] ee Gobolka Faafan, Degmada Dembel ee Gobolka Sitti iyo Dooxada Harawo.
+'''Gadabuursi''' ({{lang-en|Gadaboursi}}, "Gadabuursi"; {{lang-ar|ﻏﺎﺩﺍﺑﻮﻭﺭﺳﻲ}}) (sidoo kale loo yaqaano ''Samaroon'') waa [[Beelaha Soomaalida|qabiil]] ka tirsan [[Dir|Beelaha Dir]], ee [[Dadka Soomaalida]]. Sanadihii 1950yadii waxay ka koobnayd xisbiga [[USP]].<Ref>"[[ingiriis]]: Gadaboursi, "Gadabuursi"; [[carabi]]: ﻏﺎﺩﺍﺑﻮﻭﺭﺳﻲ, "Gadabuursiy""</ref> Beesha Gadabuursi waxay si rasmi ah u dagaan oo aad ugu badan yihiin isla markaana iska leeyihiin Gobolka [[Awdal]] ee dhacda waqooyiga dhulka [[Soomaali]]du degto.<Ref>"[[Awdal]] ee magaalo-madaxda u tahay [[magaalo|caasimada]] [[Borama]]"</ref> Waxaanay deegaan ahaan ku dhaqan yihiin degmooyinka [[Boorama]], [[Baki]], [[Lughaya]] iyo [[Saylac]]. Dhinaca wadanka Itoobiya, beeshu waxay deegaan rasmi ah ku leedahay Degmada [[Awbare]] ee Gobolka Faafan, Degmada Dembel ee Gobolka Sitti iyo Dooxada Harawo.
 
 ==Hordhac==
 Beesha Gadabuursi waxay ka mid tahay beelaha ka tirsan beel-weynta [[Dir]] ee shacan weynaha [[Soomaaliyeed]]. Dir ahaan, beesha Gadabuursi waxay tol yihiin beesha [[Ciise (beel)|Ciise]] ee deegaanka ku ah wadanka [[Jabuuti]],<Ref>"[[Dir]] ee shacan weynaha [[Soomaaliyeed]]"</ref> beesha [[Biyomaal]] ee laga helo [[Soomaaliya|koonfuta Soomaaliya]], beesha Surre (Cabdale iyo Qubays) ee ku dhaqan [[Soomaaliya|badhtamaha Soomaaliya]], [[Gaadsan]] iyo Gurgure.<Ref>"[[Biyomaal]] ee laga helo [[Soomaaliya|koonfuta Soomaaliya]], beesha Surre (Cabdale iyo Qubays) ee ku dhaqan [[Soomaaliya|badhtamaha Soomaaliya]], [[Gaadsan]] iyo Gurgure"</ref>
