*Empty MediaWiki Message*

--- a/Beer_Xaano.mw
+++ b/Beer_Xaano.mw
@@ -1,2 +1,15 @@
 '''Beer Xaano''' Waa [[Degmo]] ka mid ah Gobolka [[Jubbada Hoose]].
-waxaanna degan  beesha Geeljecel. Waa degmo xaga beeraha iyo xoolo dhaqashada aad ugu wanaagsan waxeyna u dhowdahay magaala madaxda gobolka ee Kismaayo waa meesha laga supply gareeyo waxyaabaha asaasjiga u ah nolosha magaalada Kismaayo sida caanaha, dalaga beeraha qeybahiisa kala duwan, dhuxusha iwm.
+waxaanna degan  beesha Geeljecel. Waa degmo xaga beeraha iyo xoolo dhaqashada aad ugu wanaagsan waxeyna u dhowdahay magaala madaxda gobolka ee Kismaayo waa meesha looga Keeno waxyaabaha asaasiga u ah nolosha magaalada Kismaayo sida caanaha, dalaga beeraha qeybahiisa kala duwan, dhuxusha iwm.
+Beerxaano waxay kismayo u jirtaa 53 km wooqooyi 
+Degmada waxaa hoos yimaada tuulooyin badan sida:
+1. Qabri shariif 
+2.Dhalaja 
+3.Kubikibir 
+4.faaf garseey 
+5.Qotey gaduud 
+6.Ceel cad 
+7.Canjeel 
+8.Hararmiin 
+9.Hareeri Balaa 
+10.Galool shimbi 
+11.Libi kuus
